--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@
     color: rgba(137, 43, 226, 0.101);
     z-index: 1;
     padding: 5px;
+    margin-top: 5%;
 }
 
 .quoteBox{
+    min-height: 40vh;
     align-items: center;
     text-align: center;
     border-radius: 100px;
@@ -33,6 +35,7 @@
     margin-right: auto;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     backdrop-filter: saturate(180%) blur(20px);
+
 }
 
 #all{
@@ -63,9 +66,6 @@
     .quoteText{
         font-size: 1.7rem;
     }
-
-  
-   
   }
 
 
@@ -85,7 +85,7 @@
         padding: 10px;
     }
     .quoteText{
-        font-size: 1.2rem;
+        font-size: 1.8rem;
     }
     #all{
         padding: 10px;
@@ -109,7 +109,7 @@
         padding: 20px;
     }
     .quoteText{
-        font-size: 1rem;
+        font-size: 1.8rem;
     }
     #all{
         padding: 0px;
